# ray-tracer

./: CMakeLists.txt
libraries/imgui/: CMakeLists.txt
projects/rayTracer/: CMakeLists.txt
projects/rayTracer/include/: BufferObject.h  Camera.h  GeometryObject.h  Material.h  Mesh.h  Object.h  Primitives.h  SSBO.h  ShaderStruct.h  ShaderStructs.h  Transform.h  VAO.h
projects/rayTracer/resources/materials/: materials.json
projects/rayTracer/resources/models/: WhiteRoom.mtl
projects/rayTracer/resources/shaders/: random.glsl  raytracing.frag
projects/rayTracer/src/: RayTracer.cpp
